--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,29 +22,56 @@
             android:background="@color/halo_red"
             android:gravity="center"
             android:text="@string/BT_connection_status" />
+        <TextView
+            android:id="@+id/deviceStatus_txt"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/device"
+            android:textColor="@color/white"
+            android:textColorHint="@color/white"
+            android:layout_below="@+id/tvConnectionStatus"
+            android:gravity="center_horizontal"/>
 
         <LinearLayout
             android:id="@+id/kLineLayout"
             android:layout_width="250dp"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:layout_below="@+id/tvConnectionStatus"
+            android:layout_below="@+id/deviceStatus_txt"
             android:layout_centerHorizontal="true"
             android:visibility="gone">
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
                 android:hint="@string/k_line_data_only"
                 android:textColorHint="@color/halo_red"
-                android:gravity="center_horizontal"/>
+                tools:ignore="TextContrastCheck" />
 
-            <Button
-                android:id="@+id/sendCMD_btn"
-                android:layout_width="wrap_content"
+            <RelativeLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/send_cmd"
-                android:layout_gravity="center_horizontal"/>
+                android:orientation="horizontal">
+                <Button
+                    android:id="@+id/sendCMD_btn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/send_cmd"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_alignParentStart="true"
+                    android:layout_toStartOf="@+id/hideLayout_btn"/>
+
+                <ImageButton
+                    android:id="@+id/hideLayout_btn"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    android:src="@drawable/ic_baseline_close_24"
+                    android:contentDescription="@string/close_gauges"
+                    android:layout_alignParentEnd="true"
+                    android:background="@color/transparent" />
+
+            </RelativeLayout>
 
             <TextView
                 android:id="@+id/output_txt"
