--- a/app/src/main/res/layout/fragment_gauge_view.xml
+++ b/app/src/main/res/layout/fragment_gauge_view.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context="com.denommeinc.verncodereader.gauges.GaugeViewFragment"
+    tools:context="com.denommeinc.vern.gauges.GaugeViewFragment"
     android:gravity="center_vertical|center_horizontal"
     android:background="@color/background_dark">
 
@@ -39,14 +39,17 @@
             android:id="@+id/floatingActionButton"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:contentDescription="@string/refresh"
-            android:clickable="true"
-            android:src="@drawable/ic_baseline_refresh_24"
-            android:focusable="true"
             android:layout_below="@+id/progressiveGauge"
             android:layout_alignParentEnd="true"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginBottom="20dp"
             android:background="@color/transparent"
-            android:layout_margin="20dp"/>
+            android:clickable="true"
+            android:contentDescription="@string/refresh"
+            android:focusable="true"
+            android:src="@drawable/ic_baseline_refresh_24" />
 
 
 </RelativeLayout>
