--- a/app/src/main/res/layout-land/hud_view.xml
+++ b/app/src/main/res/layout-land/hud_view.xml
@@ -31,4 +31,17 @@
         app:sv_unit="@string/mph"
         app:sv_maxSpeed="180"
         />
+
+    <ImageButton
+        android:id="@+id/close_ib"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_baseline_close_24"
+        android:contentDescription="@string/close_gauges"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:background="@color/transparent"
+        android:layout_margin="10dp"
+        android:padding="20dp"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
